
Fri Feb 22 18:31:46 2013  Aaron Patterson <aaron@tenderlovemaking.com>

        * lib/rexml/document.rb (REXML::Document.entity_expansion_text_limit):
          new attribute to read/write entity expansion text limit.  the default
          limit is 10Kb.

        * lib/rexml/text.rb (REXML::Text.unnormalize): check above attribute.

Fri Mar  2 11:44:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

        * marshal.c (mark_dump_arg): mark destination string.  patch by
          Vit Ondruch.  [Bug #4339]

        * marshal.c (clear_dump_arg, clear_load_arg): clean up also data
          tables as same as symbols tables.

Fri Mar  2 11:44:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

        * marshal.c (struct {dump,load}_arg): manage with dfree, instead
          of using local variable which may be moved by context switch.
          [ruby-dev:39425]

Mon Oct 12 22:35:00 2011  Brent Roman  <brent@mbari.org>

        * fixed inverted NUL_P test in eval.c(cc_purge)

Mon Oct 11 17:55:00 2011  Brent Roman  <brent@mbari.org>

        * always includes GC.stress method, even if MBARI_API enabled

Mon Oct 10 23:15:00 2011  Brent Roman  <brent@mbari.org>

        * MBARI 8 patchset wrapup

        * removed break; after JUMP_TAG

        * fixed GCC 4.6 compile warnings in eval.c and gc.c

Fri Jul 22 11:20:20 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

        * ext/openssl/ossl_digest.c: Check return value of EVP_DigestInit_ex.
        * ext/openssl/ossl_hmac.c: Check return value of HMAC_Init_ex.
          Thanks, Jared Jennings, for the patch.
          [ Ruby 1.9 - Bug #4944 ] [ruby-core:37670]

Thu Jun 30 12:52:56 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tk/extconf.rb (intptr_t, uintptr_t): support for the latest ActiveTcl with mingw.

Sun Jun 26 17:52:32 2011  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

        * ext/openssl/ossl_ssl.c: By trunk@31346, function check of SSLv2 is executed.